--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.1.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "start": "vite",
         "build": "vite build",
         "preview": "vite preview"
     },
@@ -36,6 +36,8 @@
         "react-apexcharts": "^1.4.0",
         "react-dom": "^18.2.0",
         "react-flatpickr": "^3.10.13",
+        "react-google-recaptcha": "^3.1.0",
+        "react-google-recaptcha-v3": "^1.10.1",
         "react-hook-form": "^7.43.9",
         "react-input-mask": "^3.0.0-alpha.2",
         "react-input-verification-code": "^1.0.2",
@@ -49,6 +51,7 @@
         "sort-by": "^0.0.2",
         "swiper": "^9.2.0",
         "typescript": "^5.0.4",
+        "usehooks-ts": "^2.9.1",
         "uuid": "^9.0.0",
         "vite-plugin-svgr": "^3.2.0"
     },
