--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jsvectormap": "^1.5.1",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
+        "nanoid": "^4.0.2",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
         "react-dom": "^18.2.0",
@@ -52,7 +53,6 @@
         "swiper": "^9.2.0",
         "typescript": "^5.0.4",
         "usehooks-ts": "^2.9.1",
-        "uuid": "^9.0.0",
         "vite-plugin-svgr": "^3.2.0"
     },
     "devDependencies": {
