feat(ЛК): раздел настройки

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
-        "src/shared/lib/callToast.js"
+        "src/utils/callToast.ts"
     ],
     "exclude": [
         "node_modules"
