--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "axios": "^1.4.0",
         "classnames": "^2.3.2",
         "date-fns": "^2.30.0",
-        "dayjs": "^1.11.7",
+        "dayjs": "^1.11.8",
         "dotenv": "^16.0.3",
         "effector": "^22.8.5",
         "effector-react": "^22.5.2",
@@ -40,12 +40,15 @@
         "react-google-recaptcha": "^3.1.0",
         "react-google-recaptcha-v3": "^1.10.1",
         "react-hook-form": "^7.43.9",
+        "react-image-file-resizer": "^0.4.8",
+        "react-images-uploading": "^3.1.7",
         "react-input-mask": "^3.0.0-alpha.2",
         "react-input-verification-code": "^1.0.2",
         "react-multi-date-picker": "^4.0.0",
         "react-router-dom": "^6.8.1",
         "react-select": "^5.7.3",
         "react-tailwindcss-datepicker": "^1.6.1",
+        "react-toastify": "^9.1.3",
         "ru-validation-codes": "^2.9.0",
         "sass": "^1.62.1",
         "simple-datatables": "^7.2.0",
